fixed img overflow bug

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -238,3 +238,8 @@ outline: 0;
 .cancle {
   text-decoration: line-through;
 }
+
+img {
+  width: 100%;
+  overflow: hidden;
+}
